# data-dojo-1

./: .dockerignore  .gitignore  DARK_THEME_SUCCESS.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MESSY_DATA_GUIDE.md  ML_PIPELINE_SUCCESS.md  NOTEBOOK_DATAFLOW.md  NOTEBOOK_TEMPLATES_README.md  NOTEBOOK_TEMPLATE_FIX.md  OPTION3_NOTEBOOK_TEMPLATES.md  README.md  WEB_DASHBOARD_README.md  WEB_INTERFACE_SUCCESS.md  WEEK2_OPTION1_SUMMARY.md  app.py  demo.py  docker-compose.yml  explore_datasets.py  flask_ml_app.py  manual_workflow.py  practice_imbalanced_data.ipynb  practice_missing_values.ipynb  practice_normalization.ipynb  practice_outliers.ipynb  pyproject.toml  pytest.ini  requirements-web.txt  requirements.txt  test_app.py  trail_project.ipynb  user_progress.json
.streamlit/: config.toml
datasets/: README.md
datasets/ecommerce/: customers_messy.csv  transactions.csv  user_product_interactions.csv
datasets/finance/: bank_transactions.csv  credit_applications.csv  stock_prices.csv
datasets/healthcare/: ehr_records.csv  lab_results.csv  patient_demographics.csv
datasets/uploads/: bank_transactions.csv
demo_datasets/: sample_bank_transactions.csv  sample_credit_applications.csv  sample_customers.csv  sample_lab_results.csv  sample_patients.csv  sample_transactions.csv
examples/: 01_getting_started.ipynb  02_data_cleaning_workflow.ipynb  03_progress_tracking.ipynb
generated_datasets/ecommerce/: customers_messy.csv  dataset_01_customers.csv  dataset_01_transactions.csv  transactions.csv
generated_datasets/finance/: bank_transactions.csv  credit_applications.csv  finance_messy_bank_transactions.csv  finance_messy_credit_applications.csv  finance_small_data_01_bank_transactions.csv  finance_small_data_01_credit_applications.csv
generated_datasets/healthcare/: lab_results.csv  patient_demographics.csv
generated_notebooks/classification_analysis/: customers_messy_classification_analysis_20251209_125054.ipynb  transactions_20251209_150934.ipynb
generated_notebooks/data_cleaning/: customers_messy_data_cleaning_20251209_125633.ipynb  customers_messy_data_cleaning_20251209_155349.ipynb  patient_demographics_data_cleaning_20251209_124739.ipynb
generated_notebooks/exploratory_data_analysis/: bank_transactions_exploratory_data_analysis_20251209_125215.ipynb
generated_notebooks/projects/: ecommerce_intermediate_01_20251206_184941.ipynb  finance_beginner_01_20251209_155631.ipynb
generated_notebooks/regression_analysis/: transactions_20251209_160122.ipynb
generated_notebooks/time_series_analysis/: credit_applications_20251208_233953.ipynb  ehr_records_20251206_184001.ipynb  patient_demographics_20251206_145818.ipynb  stock_prices_20251208_115712.ipynb
notebooks/: datadojo_progress_20251208.html  datadojo_progress_20251209.html  ehr_records_time_series_analysis.ipynb  patient_demographics_time_series_analysis.ipynb  stock_prices_time_series_analysis.ipynb  transactions_regression_analysis.ipynb
profiles/: Stocks_profile.txt  breast_cancer_profile.txt  customers_messy_profile.txt  data_x_x2_x3_profile.txt  ehr_records_profile.txt  iris_profile.txt  lab_results_profile.txt  linnerud_exercise_profile.txt  linnerud_physiological_profile.txt  msft_profile.txt  mt19937-testset-1_profile.txt  mt19937-testset-2_profile.txt  patient_demographics_profile.txt  pcg64-testset-1_profile.txt  pcg64-testset-2_profile.txt  pcg64dxsm-testset-1_profile.txt  pcg64dxsm-testset-2_profile.txt  philox-testset-1_profile.txt  philox-testset-2_profile.txt  sample_customers_profile.txt  sample_lab_results_profile.txt  sample_patients_profile.txt  sample_transactions_profile.txt  sfc64-testset-1_profile.txt  sfc64-testset-2_profile.txt  stock_prices_profile.txt  summary_report.txt  transactions_profile.txt  umath-validation-set-arccos_profile.txt  umath-validation-set-arccosh_profile.txt  umath-validation-set-arcsin_profile.txt  umath-validation-set-arcsinh_profile.txt  umath-validation-set-arctan_profile.txt  umath-validation-set-arctanh_profile.txt  umath-validation-set-cbrt_profile.txt  umath-validation-set-cos_profile.txt  umath-validation-set-cosh_profile.txt  umath-validation-set-exp2_profile.txt  umath-validation-set-exp_profile.txt  umath-validation-set-expm1_profile.txt  (+10 more)
progress_report/: datadojo_progress_20251206.html  datadojo_progress_20251206.txt
src/datadojo/: __init__.py  __main__.py  demo.py  dojo_api.py
src/datadojo/cli/: __main__.py  complete_step.py  doctor.py  explain_concept.py  generate_data.py  generate_notebook.py  interactive_session.py  interface.py  list_datasets.py  list_projects.py  ml_pipeline.py  pipeline_cmd.py  practice.py  profile_data.py  show_progress.py  start_project.py  validate_data.py  web_launch.py
src/datadojo/config/: __init__.py  settings.py
src/datadojo/core/: __init__.py  dojo.py  educational.py  pipeline.py  project.py
src/datadojo/domains/: __init__.py  ecommerce.py  finance.py  healthcare.py
src/datadojo/educational/: __init__.py  concepts.py  guidance.py  visualization.py
src/datadojo/ml/: __init__.py  automl_engine.py  simple_ml_engine.py
src/datadojo/notebook/: __init__.py  template_engine.py
src/datadojo/services/: domain_service.py  educational_service.py  pipeline_service.py  project_service.py
src/datadojo/storage/: __init__.py  file_storage.py  progress_storage.py
src/datadojo/utils/: __init__.py  claude_theme.py  data_limits.py  exceptions.py  intelligent_profiler.py  synthetic_data_generator.py  theme.py
src/datadojo/web/: __init__.py  config.py  styles.py  (+8 more)
templates/: ml_interface.html
test_datasets/healthcare/: patient_demographics.csv
tests/contract/: test_cli_interface.py  test_dojo_interface.py  test_educational_interface.py  test_pipeline_interface.py  test_project_interface.py
tests/integration/: test_advanced_workflow.py  test_beginner_workflow.py  test_cli_commands.py  test_educational_system.py  test_intermediate_workflow.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_models.py  test_notebook_features.py  test_services.py  test_utils.py
