[tool.poetry]
name = "datadojo"
version = "0.1.0"
description = "AI-Powered Data Preparation Learning Framework"
authors = ["DataDojo Team <team@datadojo.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/datadojo/datadojo"
repository = "https://github.com/datadojo/datadojo"
documentation = "https://datadojo.readthedocs.io"
keywords = ["data", "preprocessing", "education", "machine-learning", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
plotly = ">=5.15.0"
jupyter = ">=1.0.0"
rich = ">=13.0.0"
click = ">=8.1.0"
pydantic = ">=2.0.0"
pyyaml = ">=6.0.0"
prompt-toolkit = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.0"
pytest-mock = ">=3.11.0"
pytest-timeout = ">=2.1.0"
pytest-xdist = ">=3.3.0"
black = ">=23.7.0"
ruff = ">=0.0.285"
mypy = ">=1.5.0"
pre-commit = ">=3.3.0"

[tool.poetry.group.performance.dependencies]
polars = ">=0.18.0"
pyarrow = ">=12.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.1.0"
mkdocstrings = {version = ">=0.22.0", extras = ["python"]}

[tool.poetry.scripts]
datadojo = "datadojo.cli.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll handle this case by case)
]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]  # Allow assert statements in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["datadojo"]
force-single-line = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true
